Added new API commands list list-s3-buckets and upload-s3-file for manipulating files on Amazon's S3 service.
Backups of more than 2GB to Amazon's S3 service now use the mulitpart protocol, which is needed to support large backups.
The contact email address for a domain can now contain multiple addresses with real names.
The DKIM feature in Virtualmin now supports OpenDKIM, as seen in Ubuntu 12.04.
Backups to Amazon S3 can now be to a sub-directory under a bucket, rather than being at the top level.
The disable-feature and enable-feature API commands now have flags to disassocaite and re-associate features with a domain, without actually updating the underlying configuration files or databases.
Virtual server owners can now be granted permission to create domains on a single IP address.
Added an option to the restore form and a flag to restore-domain to ignore virtual servers that have failed.
The default shell for new virtual servers on Linux systems is now bash, if installed.
When the SSL certificate for a domain is changed, any domains which shared the old cert but cannot use the new one will be switched to a copy of the old cert file.
---- Changes since 3.93 ----
Updated the SugarCRM script installer to version 6.5.2, WHCMS to 5.1.2, Django to 1.4.1, phpMyAdmin to 3.5.2.1, ZenPhoto to 1.4.3.1, PHPList to 2.10.19, Drupal to 7.15, RoundCube to 0.8.0, and CMS made simple to 1.11.
Alias virtual servers that have their own mailboxes and aliases can now be created, rather than always forwarding mail to the destination domain.
When installing Ruby scripts, dependencies like gcc and libfcgi-devel are now installed automatically if possible.