@@ -65,8 +65,6 @@
  - Per-domain postfix outgoing IP
 	- https://www.virtualmin.com/node/22875
 	- Setup at install time, for Postfix 2.7+
-	- CHANGELOG
-	- http://tech.groups.yahoo.com/group/postfix-users/message/283594
 
  - Allow selection of any file for cert and key
 	- Under domain's home
