@@ -1357,3 +1357,4 @@ When the SSL certificate for a domain is changed, any domains which shared the o
 Updated the SugarCRM script installer to version 6.5.2, WHCMS to 5.1.2, Django to 1.4.1, phpMyAdmin to 3.5.2.1, ZenPhoto to 1.4.3.1, PHPList to 2.10.19, Drupal to 7.15, RoundCube to 0.8.0, and CMS made simple to 1.11.
 Alias virtual servers that have their own mailboxes and aliases can now be created, rather than always forwarding mail to the destination domain.
 When installing Ruby scripts, dependencies like gcc and libfcgi-devel are now installed automatically if possible.
+The outgoing IP address for email sent from a domain can now be configured to match the domain's IP, when using Postfix 2.7 or above.
